<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Sentenceoriser
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="title_section1" >Section 1
    </string>
    <string name="title_section2" >Section 2
    </string>
    <string name="title_section3" >Section 3
    </string>
    <string name="title_section4" >Section 3
    </string>
    <string name="share">Share</string>
    <string name="customise">Customise</string>
    <string name="title_section5">Section 5</string>
    <string name="OK">OK</string>
    <string name="reset">Reset</string>
    <string name="you">You</string>
    <string name="Topic">Topic</string><string name="me">Me</string><string name="them">Them</string>
    <string name="tempText">New Text</string><string name="your_status">Your Status</string>
    <string name="my_status">My Status</string>
    <string name="our_status">Our Status</string>
    <string name="Situation">situation</string>
    <string name="active">Active</string>
    <string name="custom">Custom</string>
    <string name="customised">Customised</string>
    <string name="arrow">arrow</string>
    <string name="done">Done</string>

</resources>
